backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-api
        image: backend:latest
        ports:
        - containerPort: 8000

        readinessProbe:
          httpGet:
            path: /readyz
            port: 8000
          initialDelaySeconds: 1
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
